force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/Contenido_Estado_Cuenta_Conciliacion__c.object-meta.xml
<CustomObject>
    <label>Contenido Estado Cuenta Conciliacion</label>
    <nameField>
        <label>Nombre de Contenido Estado Cuenta Concil</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenido Estado Cuenta Conciliaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>