force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <description>Este campo sirve para seleccionar si se quiere mandar varios elementos para crear la partida inversa cuando tiene mas de dos dias y se coloca una &quot;S&quot;  para mandarla de lo contrario queda vació.</description>
    <label>Check</label>
    <length>1</length>
    <type>Text</type>
</CustomField>