force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Compra_Dolar__c.field-meta.xml
<CustomField>
    <fullName>Compra_Dolar__c</fullName>
    <description>Compra de dolar en la cual solo se asignara S o N</description>
    <label>Compra Dolar</label>
    <length>1</length>
    <type>Text</type>
</CustomField>