force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Conciliado__c.field-meta.xml
<CustomField>
    <fullName>Conciliado__c</fullName>
    <description>Conciliado  S = si N = no</description>
    <label>Conciliado</label>
    <length>1</length>
    <type>Text</type>
</CustomField>