force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>