force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Dias__c.field-meta.xml
<CustomField>
    <fullName>Dias__c</fullName>
    <description>Aumento de Dias</description>
    <label>Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>