force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Fecha_posteo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_posteo__c</fullName>
    <label>Fecha posteo</label>
    <type>Date</type>
</CustomField>