force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Fecha_Sistema__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Sistema__c</fullName>
    <label>Fecha Sistema</label>
    <type>Date</type>
</CustomField>