force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Fecha_Valor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Valor__c</fullName>
    <label>Fecha Valor</label>
    <type>Date</type>
</CustomField>