force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Monto_Fijo__c.field-meta.xml
<CustomField>
    <fullName>Monto_Fijo__c</fullName>
    <description>Este campo es una replica del monto original se hizo por cuestiones técnicas.</description>
    <label>Monto Fijo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>