force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Monto_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Monto_Pendiente__c</fullName>
    <label>Monto Pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>