force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Narrativa__c.field-meta.xml
<CustomField>
    <fullName>Narrativa__c</fullName>
    <label>Narrativa</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>