force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Numeracion_Automativa__c.field-meta.xml
<CustomField>
    <fullName>Numeracion_Automativa__c</fullName>
    <displayFormat>A-{00000}</displayFormat>
    <label>Numeracion Automativa</label>
    <type>AutoNumber</type>
</CustomField>