force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Partida_Debito__c.field-meta.xml
<CustomField>
    <fullName>Partida_Debito__c</fullName>
    <description>Este campo traerá la respuesta desde sysde si la partida de débito se creo correctamente. y la respuesta sera &apos;S&apos; o &apos;N&apos;</description>
    <label>Partida Debito</label>
    <length>1</length>
    <type>Text</type>
</CustomField>