force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>