force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Respuesta_SYSDE__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_SYSDE__c</fullName>
    <label>Respuesta SYSDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>