force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Tipo_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Planilla__c</fullName>
    <description>Tipo de planilla lempira = HNL o dolar = USD</description>
    <label>Tipo Planilla</label>
    <length>3</length>
    <type>Text</type>
</CustomField>