force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Usuario_Estado_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Estado_Cuenta__c</fullName>
    <description>Usuario que viene guardado  en el estado de cuenta</description>
    <label>Usuario EC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>