force-app/main/default/objects/Contenido_Estado_Cuenta_Conciliacion__c/fields/Usuario_SIstema__c.field-meta.xml
<CustomField>
    <fullName>Usuario_SIstema__c</fullName>
    <label>Usuario SIstema</label>
    <length>20</length>
    <type>Text</type>
</CustomField>